fix visibilité link composant news

--- a/src/components/News/style.scss
+++ b/src/components/News/style.scss
@@ -8,9 +8,12 @@
     padding-bottom: 1rem;
   }
   a{
+    color: white;
+    border-bottom: white 1px solid;
     font-style: italic;
     font-size: 1.7rem;
   }
   a:hover{
+    color: #2FCFD0;
   }
 }
